@@ -3,6 +3,8 @@ CHANGES.txt - 2006-03-29
 
 CHANGES IN CUPS V1.2
 
+	- The scheduler was not using the configured default
+	  Group (STR #1521)
 	- The web interface still did not show the localized time
 	  and date for some locales and systems (STR #1509)
 	- httpAddrGetList() would crash on systems without
